--- a/main/basic_maketitle.tex
+++ b/main/basic_maketitle.tex
@@ -5,17 +5,24 @@
 \usepackage{textcomp}%
 \usepackage{lastpage}%
 %
-\title{Neural Network Training Report}%
+\title{Informe de entrenamiento de la red}%
 \date{\today}%
 %
 \begin{document}%
 \normalsize%
 \maketitle%
-\section{Dataset Information}%
-\label{sec:DatasetInformation}%
-Lorem ipsum\newline%
-        Lorem ipsum 2\newline%
-        
+\section{Información sobre el dataset}%
+\label{sec:Informacinsobreeldataset}%
+ En la siguiente tabla se recoge toda la información \newline%
+         relacionada, sobre el dataset empleado en el entrenamiento de la red neuronal:\newline%
+        %
+\begin{tabular}{c|c}%
+\hline%
+1&2\\%
+&\\%
+4&5\\%
+\hline%
+\end{tabular}
 
 %
 \end{document}
