--- a/main/basic_maketitle.tex
+++ b/main/basic_maketitle.tex
@@ -13,9 +13,7 @@
 \maketitle%
 \section{Información sobre el dataset}%
 \label{sec:Informacinsobreeldataset}%
- En la siguiente tabla se recoge toda la información \newline%
-         relacionada, sobre el dataset empleado en el entrenamiento de la red neuronal:\newline%
-        %
+En la siguiente tabla se recoge toda la información          relacionada, sobre el dataset empleado en el entrenamiento de la red neuronal: %
 \begin{tabular}{c|c}%
 \hline%
 1&2\\%
